--- a/index.html
+++ b/index.html
@@ -16,19 +16,37 @@
     </style>
 </head>
 <body>
-    <nav>
-        <strong>NKEM.</strong>
-        <div><a href="#work">Work</a> | <a href="mailto:your@email.com">Contact</a></div>
-    </nav>
-    <header class="hero">
-        <h1>Hi, I'm Nkem. I design digital products that work for people.</h1>
-        <p>Currently migrating my portfolio from Notion to GitHub.</p>
-    </header>
-    <section id="work" class="projects">
-        <div class="card">
-            <h3>Project One</h3>
-            <p>Coming soon from Notion...</p>
+  <nav>
+    <div class="logo">[NKEM_OK]</div>
+    <div class="nav-links">
+        <a href="#">[WORK]</a>
+        <a href="#">[ABOUT]</a>
+        <a href="#">[RESUME]</a>
+    </div>
+</nav>
+
+<section class="hero">
+    <div class="status-info">
+        STATUS INFORMATION:<br>
+        PRODUCT DESIGNER<br>
+        & STRATEGIST AT<br>
+        <span>NKEMOK.GITHUB.IO</span>
+    </div>
+
+    <div class="profile-wrap">
+        <div class="profile-pic">
+            <img src="your-photo.jpg" alt="Nkem">
         </div>
-    </section>
+    </div>
+
+    <div class="features">
+        FEATURES:<br>
+        EXPERIENCE DESIGN<br>
+        INTERFACE DESIGN<br>
+        DESIGN STRATEGY<br>
+        VISUAL DESIGN<br>
+        <a href="#" class="btn-more">MORE INFO</a>
+    </div>
+</section>
 </body>
 </html>
