--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="profile-wrap">
         <div class="profile-pic">
-            <img src="your-photo.jpg" alt="Nkem">
+            <img src="amber photo.jpg" alt="Nkem">
         </div>
     </div>
 
