--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <section class="hero-visual">
             <div class="polaroid-frame">
-                <img src="your-photo.jpg" alt="Nkem" class="profile-img">
+                <img src="amber.png" alt="Nkem" class="profile-img">
                 <p class="handwriting">Hey! I'm Nkem :)</p>
             </div>
             <div class="connect-badge">
