--- a/index.html
+++ b/index.html
@@ -40,6 +40,43 @@
             </div>
         </section>
     </main>
+<section id="work" class="project-section">
+    <div class="section-header">
+        <span class="label">SELECTED WORK</span>
+        <div class="line"></div>
+    </div>
 
+    <div class="project-grid">
+        <a href="ibank.html" class="project-card">
+            <div class="card-content">
+                <div class="card-tag">Fintech</div>
+                <h3>iBank: Financial Inclusion</h3>
+                <p>Redesigning the mobile banking experience for underbanked youth.</p>
+                <div class="card-footer">
+                    <span>View Case Study</span>
+                    <span class="arrow">→</span>
+                </div>
+            </div>
+            <div class="card-image">
+                <img src="images/ibank-preview.png" alt="iBank UI">
+            </div>
+        </a>
+
+        <a href="xeda.html" class="project-card">
+            <div class="card-content">
+                <div class="card-tag">E-commerce</div>
+                <h3>Xeda Fashion App</h3>
+                <p>Simplifying the high-end fashion checkout flow to increase conversion.</p>
+                <div class="card-footer">
+                    <span>View Case Study</span>
+                    <span class="arrow">→</span>
+                </div>
+            </div>
+            <div class="card-image">
+                <img src="images/xeda-preview.png" alt="Xeda UI">
+            </div>
+        </a>
+    </div>
+</section>
 </body>
 </html>
