--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@ g<!DOCTYPE html>
     <main class="hero-container">
         <section class="hero-text">
             <h1>I design products that engage, convert, and scale.</h1>
-            
             <p class="bio">
-                I’m a <strong>UX Designer</strong> with a passion for </strong>simplifying complexity</strong> in SaaS & B2C products.
-            </p>
+                I’m a <strong>UX Designer</strong> with a passion for <strong>simplifying complexity</strong> in SaaS & B2C products.
+        </p>
         </section>
 
         <section class="hero-visual">
