--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-g<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,7 +13,7 @@ g<!DOCTYPE html>
 
     <main class="hero-container">
         <section class="hero-text">
-            <h1>I design products that engage, convert, and scale.</h1>
+            <h1>I design products that <em>engage</em>, <em>convert</em>, and <em>scale</em>.</h1>
             <p class="bio">
                 I’m a <strong>UX Designer</strong> with a passion for <strong>simplifying complexity</strong> in SaaS & B2C products.
         </p>
