--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
     <main class="hero-container">
         <section class="hero-text">
-            <h1>I design products that <em>engage</em>, <em>convert</em>, and <em>scale</em>.</h1>
+            <h1>I design products that engage, convert, and scale.</h1>
             <p class="bio">
-                I’m a <strong>UX Designer</strong> with a passion for <strong>simplifying complexity</strong> in SaaS & B2C products.
+                I’m a <strong>UX Designer</strong> with a passion for <em>simplifying complexity</em> in SaaS & B2C products.
         </p>
         </section>
 
