--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <a href="#about">about</a>
     <a href="#contact">contact</a>
   </nav>
+  <link rel="stylesheet" href="style.css">
 </header>
 
 <main class="hero">
