--- a/index.html
+++ b/index.html
@@ -19,3 +19,15 @@
   
   <div class="cursor-detail"></div>
 </main>
+<section id="about" class="about-section">
+  <h2 class="about-title">about me</h2>
+
+  <div class="about-content">
+    <p class="about-body">
+      I'm a designer, dog mom and an avid food lover 
+      obsessed with the world of flavour, culture & design
+    </p>
+  </div>
+
+  <div class="icon-detail"></div>
+</section>
