--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
   <div class="about-content">
     <p class="about-body">
-      I'm a designer, dog mom and an avid food lover 
-      obsessed with the world of flavour, culture & design
+      I'm a book worm, plant mom and an avid food lover 
+      obsessed with the world of history, culture and flavor.
     </p>
   </div>
 
