--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <header class="navbar">
-  <div class="logo">nkem okafor</div>
+  <a href="index.html" class="logo">nkem okafor</a>
+  
   <nav>
-    <a href="#projects">projects</a>
-    <a href="#about">about</a>
-    <a href="#contact">contact</a>
+    <a href="index.html">projects</a>
+    <a href="about.html">about</a>
+    <a href="contact.html">contact</a>
   </nav>
-  <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </header>
 
 <main class="hero">
