--- a/about.html
+++ b/about.html
@@ -1,5 +1,12 @@
 
-<header class="navbar">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="style.css">
+    <title>About | Nkem Okafor</title>
+</head>
+<body class="about-page-body">
+    <header class="navbar">
   <a href="index.html" class="logo">nkem okafor</a>
   <nav>
     <a href="index.html">projects</a>
@@ -7,3 +14,14 @@
     <a href="contact.html">contact</a>
   </nav>
 </header>
+
+    <main class="about-main">
+      <h1 class="about-title">about me</h1>
+      <div class="about-content">
+        <p>I'm a designer, dog mom and an avid food lover obsessed with the world of flavour, culture & design</p>
+      </div>
+      
+      <div class="icon-detail"></div>
+    </main>
+</body>
+</html>
