--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <main class="about-main">
       <h1 class="about-title">about me</h1>
       <div class="about-content">
-        <p>I'm a designer, dog mom and an avid food lover obsessed with the world of flavour, culture & design</p>
+        <p>I'm a book worm, plant mom and an avid food lover obsessed with the world of history, culture & flavor</p>
       </div>
       
       <div class="icon-detail"></div>
