--- a/about.html
+++ b/about.html
@@ -8,11 +8,10 @@
 <body class="about-page-body">
     <header class="navbar">
   <a href="index.html" class="logo">nkem okafor</a>
-  <nav>
-    <a href="index.html">projects</a>
-    <a href="about.html">about</a>
-    <a href="contact.html">contact</a>
-  </nav>
+        <nav>
+  <a href="index.html">projects</a> <a href="about.html">about</a>    <a href="contact.html">contact</a>
+</nav>
+ 
 </header>
 
     <main class="about-main">
