--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact | Nkem Okafor</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header class="navbar">
+      <a href="index.html" class="logo">nkem okafor</a>
+      <nav>
+        <a href="index.html">projects</a>
+        <a href="about.html">about</a>
+        <a href="contact.html" class="active">contact</a>
+      </nav>
+    </header>
 
+    <main class="subpage-main">
+      <h1 class="subpage-title">say hello</h1>
+      
+      <div class="subpage-content">
+        <p>
+          Let's collaborate. feel free to drop me a line <br>
+          about your project or follow me on social networks
+        </p>
+        
+        <div class="contact-links">
+          <a href="mailto:your@email.com" class="email-link">your@email.com</a>
+        </div>
+      </div>
+
+      <div class="icon-detail"></div>
+    </main>
+</body>
+</html>
