--- a/contact.html
+++ b/contact.html
@@ -16,12 +16,12 @@
       </nav>
     </header>
 <main class="subpage-main">
-  <h1 class="subpage-title">say hello</h1>
+  <h1 class="subpage-title">say hi</h1>
   
   <div class="subpage-content">
     <p>
-      Let's collaborate. feel free to drop me a line <br>
-      about your project or follow me on social networks
+      Let's collaborate, feel free to send an email<br>
+      or find me on linkedin.
     </p>
     
     <div class="social-grid">
@@ -32,7 +32,7 @@
 
       <div class="contact-links">
 
-          <a href="mailto:your@email.com" class="email-link">your@email.com</a>
+          <a href="mailto:your@email.com" class="email-link">nkemxo@gmail.com</a>
 
         </div>
   </div>
