--- a/contact.html
+++ b/contact.html
@@ -15,18 +15,20 @@
         <a href="contact.html" class="active">contact</a>
       </nav>
     </header>
-<main class="subpage-main">
-  <h1 class="subpage-title">say hi</h1>
-  
-  <div class="subpage-content">
-    <p>
-      Let's collaborate, feel free to send an email<br>
+<main class="contact-page">
+  <div class="contact-header">
+    <h1 class="page-title">say hi</h1>
+  </div>
+
+  <div class="contact-content">
+    <p class="contact-description">
+      Let's collaborate, feel free to send an email <br> 
       or find me on linkedin.
     </p>
     
-    <div class="social-grid">
-      <a href="mailto:your@email.com" class="social-link">Email</a>
-      <a href="#" class="social-link">LinkedIn</a>
+    <div class="contact-links">
+      <a href="mailto:your@email.com">Email</a>
+      <a href="https://linkedin.com">LinkedIn</a>
     </div>
   </div>
 
