--- a/contact.html
+++ b/contact.html
@@ -23,10 +23,10 @@
                 or find me on linkedin.
             </p>
             
-            <div class="contact-links-list">
-                <a href="mailto:your@email.com" class="social-link">Email</a>
-                <a href="https://linkedin.com" class="social-link">LinkedIn</a>
-            </div>
+            <div class="contact-links">
+    <a href="mailto:your@email.com" class="social-link">Email</a>
+    <a href="https://linkedin.com" class="social-link" target="_blank">LinkedIn</a>
+</div>
         </div>
       
         <div class="icon-detail"></div>
