--- a/contact.html
+++ b/contact.html
@@ -22,11 +22,14 @@
                 Let's collaborate, feel free to send an email <br> 
                 or find me on linkedin.
             </p>
-            
-            <div class="contact-links">
-    <a href="mailto:your@email.com" class="social-link">Email</a>
-    <a href="https://linkedin.com" class="social-link" target="_blank">LinkedIn</a>
-</div>
+
+
+        <div class="social-grid">
+      <a href="mailto:your@email.com" class="social-link">Email</a>
+      <a href="https://linkedin.com/in/yourprofile" target="_blank" class="social-link">LinkedIn</a>
+   
+    </div>
+ 
         </div>
       
         <div class="icon-detail"></div>
