--- a/contact.html
+++ b/contact.html
@@ -13,19 +13,19 @@
             <a href="contact.html" class="active">contact</a>
         </nav>
     </header>
+<main class="about-main">
+  <h1 class="about-title">say hello</h1>
+  
+  <div class="about-content">
+    <p class="description-text">
+      Let's collaborate, feel free to send an 
+      <a href="mailto:nkemxo@gmail.com" class="text-link">email</a> 
+      or find me on <a href="https://linkedin.com/in/nkemokafor" target="_blank" class="text-link">linkedin</a>.
+    </p>
+  </div>
 
-    <main class="about-main">
-        <h1 class="about-title">say hi</h1>
-        
-        <div class="about-content">
-            <p>
-                Let's collaborate, feel free to send an email <br> 
-                or find me on linkedin.
-            </p>
- 
-        </div>
-      
-        <div class="icon-detail"></div>
-    </main>
+  <div class="icon-detail"></div>
+</main>
+   
 </body>
 </html>
