--- a/contact.html
+++ b/contact.html
@@ -17,11 +17,12 @@
   <h1 class="about-title">say hello</h1>
   
   <div class="about-content">
-    <p class="description-text">
-      Let's collaborate, feel free to send an 
-      <a href="mailto:nkemxo@gmail.com" class="text-link">email</a> 
-      or find me on <a href="https://linkedin.com/in/nkemokafor" target="_blank" class="text-link">linkedin</a>.
-    </p>
+<p class="description-text">
+  Let's collaborate, feel free to send an 
+  <a href="mailto:nkemxo@gmail.com" class="inline-link">email</a> 
+  or find me on <a href="https://linkedin.com/in/nkemokafor" target="_blank" class="inline-link">linkedin</a>.
+</p>
+
   </div>
 
   <div class="icon-detail"></div>
