--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="style.css">
+    <title>About | Nkem Okafor</title>
+</head>
+<body class="about-page-body">
+    <header class="navbar">
+  <a href="index.html" class="logo">nkem okafor</a>
+        <nav>
+  <a href="index.html">projects</a> <a href="about.html">about</a>    <a href="contact.html">contact</a>
+</nav>
+ 
+</header>
+
+    <main class="about-main">
+      <h1 class="about-title">projects</h1>
+      <div class="about-content">
+        <p>Here are some projects that I'm really proud of working on.</p>
+      </div>
+      
+      <div class="icon-detail"></div>
+    </main>
+</body>
+</html>
 
