--- a/projects.html
+++ b/projects.html
@@ -2,25 +2,42 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
-    <title>About | Nkem Okafor</title>
+    <title>Projects | Nkem Okafor</title>
 </head>
 <body class="about-page-body">
     <header class="navbar">
-  <a href="index.html" class="logo">nkem okafor</a>
+        <a href="index.html" class="logo">nkem okafor</a>
         <nav>
-  <a href="index.html">projects</a> <a href="about.html">about</a>    <a href="contact.html">contact</a>
-</nav>
- 
-</header>
+            <a href="projects.html" class="active">projects</a> 
+            <a href="about.html">about</a>    
+            <a href="contact.html">contact</a>
+        </nav>
+    </header>
 
     <main class="about-main">
-      <h1 class="about-title">projects</h1>
-      <div class="about-content">
-        <p>Here are some projects that I'm really proud of working on.</p>
-      </div>
-      
-      <div class="icon-detail"></div>
+        <h1 class="about-title">selected work</h1>
+        
+        <div class="projects-grid">
+            <div class="project-card">
+                <div class="project-image-wrapper">
+                    <img src="your-image1.jpg" alt="Project One">
+                </div>
+                <div class="project-details">
+                    <span class="project-year">2024</span>
+                    <h2 class="project-name">Project Title One</h2>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <div class="project-image-wrapper">
+                    <img src="your-image2.jpg" alt="Project Two">
+                </div>
+                <div class="project-details">
+                    <span class="project-year">2023</span>
+                    <h2 class="project-name">Project Title Two</h2>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
-
