--- a/about.html
+++ b/about.html
@@ -8,7 +8,10 @@
     <header class="navbar">
   <a href="index.html" class="logo">nkem okafor</a>
         <nav>
-  <a href="index.html">projects</a> <a href="about.html">about</a>    <a href="contact.html">contact</a>
+              <a href="index.html">projects</a> 
+            <a href="about.html">about</a>    
+            <a href="contact.html">contact</a>
+            <a href="projects.html">projects</a>
 </nav>
  
 </header>
