--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
             <a href="index.html">projects</a> 
             <a href="about.html">about</a>    
             <a href="contact.html" class="active">contact</a>
+            <a href="projects.html">projects</a>
         </nav>
     </header>
 <main class="about-main">
