--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <a href="index.html" class="logo">nkem okafor</a>
   
   <nav>
-    <a href="index.html">projects</a>
+    <a href="projects.html">projects</a>
     <a href="about.html">about</a>
     <a href="contact.html">contact</a>
   </nav>
