--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<header class="navbar">
+<!DOCTYPE html>
+<html lang="en">
+  <header class="navbar">
   <a href="index.html" class="logo">nkem okafor</a>
   
   <nav>
@@ -20,4 +22,4 @@
   
   <div class="cursor-detail"></div>
 </main>
-
+</html>
