--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
     </header>
 
     <main class="about-main">
-        <h1 class="about-title">selected work</h1>
+        <h1 class="about-title">featured work</h1>
         
         <div class="projects-grid">
             <div class="project-card">
