--- a/projects.html
+++ b/projects.html
@@ -20,11 +20,11 @@
         <div class="projects-grid">
             <div class="project-card">
                 <div class="project-image-wrapper">
-                    <img src="your-image1.jpg" alt="Project One">
+                    <img src="mesh.png" alt="Project One">
                 </div>
                 <div class="project-details">
                     <span class="project-year">2024</span>
-                    <h2 class="project-name">Project Title One</h2>
+                    <h2 class="project-name">Hybrid cloud management</h2>
                 </div>
             </div>
 
@@ -34,7 +34,7 @@
                 </div>
                 <div class="project-details">
                     <span class="project-year">2023</span>
-                    <h2 class="project-name">Project Title Two</h2>
+                    <h2 class="project-name">Concur AI</h2>
                 </div>
             </div>
         </div>
