--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
 
             <div class="project-card">
                 <div class="project-image-wrapper">
-                    <img src="your-image2.jpg" alt="Project Two">
+                    <img src="concur.png" alt="Project Two">
                 </div>
                 <div class="project-details">
                     <span class="project-year">2023</span>
