--- a/projects.html
+++ b/projects.html
@@ -20,11 +20,11 @@
         <div class="projects-grid">
             <div class="project-card">
                 <div class="project-image-wrapper">
-                    <img src="mesh.png" alt="Project 1">
+                    <img src="sev1.png" alt="Project 1">
                 </div>
                 <div class="project-details">
                     <span class="project-year">2024</span>
-                    <h2 class="project-name">Hybrid cloud management</h2>
+                    <h2 class="project-name">SevOne SaaS</h2>
                 </div>
             </div>
             
@@ -40,20 +40,20 @@
             
             <div class="project-card">
                 <div class="project-image-wrapper">
-                    <img src="concur.png" alt="Project 3">
+                    <img src="hcm.png" alt="Project 3">
                 </div>
                 <div class="project-details">
                     <span class="project-year">2022</span>
-                    <h2 class="project-name">SevOne SaaS</h2>
+                    <h2 class="project-name">Hybrid cloud management</h2>
                 </div>
             </div>
 
             <div class="project-card">
                 <div class="project-image-wrapper">
-                    <img src="concur.png" alt="Project 4">
+                    <img src="netauto.png" alt="Project 4">
                 </div>
                 <div class="project-details">
-                    <span class="project-year">2023</span>
+                    <span class="project-year">2021</span>
                     <h2 class="project-name">Network automation</h2>
                 </div>
             </div>
