--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,11 @@
                     <h2 class="project-name">SevOne SaaS</h2>
                 </div>
             </div>
-            
+
+<div class="project-image-wrapper" style="max-width: 50%;">
+    <img src="sev1.png" alt="SevOne SaaS">
+</div>
+      
             <div class="project-card">
                 <div class="project-image-wrapper">
                     <img src="concur.png" alt="Project 2">
