--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
             </div>
       
             <div class="project-card">
-                <div class="project-image-wrapper">
+                <div class="project-image-wrapper" style="max-width: 50%;">
                     <img src="concur.png" alt="Project 2">
                 </div>
                 <div class="project-details">
@@ -39,7 +39,7 @@
             </div>
             
             <div class="project-card">
-                <div class="project-image-wrapper">
+                <div class="project-image-wrapper" style="max-width: 50%;">
                     <img src="hcm.png" alt="Project 3">
                 </div>
                 <div class="project-details">
@@ -49,7 +49,7 @@
             </div>
 
             <div class="project-card">
-                <div class="project-image-wrapper">
+                <div class="project-image-wrapper" style="max-width: 50%;">
                     <img src="netauto.png" alt="Project 4">
                 </div>
                 <div class="project-details">
