--- a/contact.html
+++ b/contact.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- 
     <link rel="stylesheet" href="style.css">
-    <title>Contact | Nkem Okafor</title>
+    <title>About | Nkem Okafor</title>
 </head>
-<body class="about-page-body"> <header class="navbar">
-        <a href="index.html" class="logo">nkem okafor</a>
+<body class="about-page-body">
+    <header class="navbar">
+  <a href="index.html" class="logo">nkem okafor</a>
         <nav>
              <a href="projects.html">projects</a>
             <a href="about.html">about</a>    
-            <a href="contact.html" class="active">contact</a>
+           <a href="contact.html" class="active">contact</a>
            
-        </nav>
-    </header>
-<main class="about-main">
-  <h1 class="about-title">say hello</h1>
-  
-  <div class="about-content">
-<p class="description-text">
-  Let's collaborate, feel free to send an 
-  <a href="mailto:nkemxo@gmail.com" class="inline-link">email</a> 
-  or find me on <a href="https://linkedin.com/in/nkemokafor" target="_blank" class="inline-link">linkedin</a>.
+</nav>
+ 
+</header>
+
+    <main class="about-main">
+      <h1 class="about-title">say hello</h1>
+      <div class="about-content">
+       <p class="description-text"> Let's collaborate, feel free to send 
+        an <a href="mailto:nkemxo@gmail.com" class="inline-link">email</a> 
+        or find me on <a href="https://linkedin.com/in/nkemokafor" target="_blank" class="inline-link">linkedin</a>.
 </p>
 
-  </div>
-
-  <div class="icon-detail"></div>
-</main>
-   
+      </div>
+      
+      <div class="icon-detail"></div>
+    </main>
 </body>
 </html>
