--- a/projects.html
+++ b/projects.html
@@ -15,9 +15,9 @@
     </header>
 
     <main class="about-main">
-        <h1 class="about-title">featured work</h1>
-        
-        <div class="projects-grid">
+            <div class="content-wrapper">
+            <h1 class="about-title">featured work</h1>
+                <div class="projects-grid">
             <div class="project-card">
                 <div class="project-image-wrapper" style="max-width: 80%;">
                     <img src="sev1.png" alt="Project 1">
@@ -57,8 +57,8 @@
                     <h2 class="project-name">Network automation</h2>
                 </div>
             </div>
-            
         </div>
+            </div>
     </main>
 </body>
 </html>
