--- a/projects.html
+++ b/projects.html
@@ -15,12 +15,13 @@
     </header>
 
     <main class="about-main">
-            <div class="content-wrapper">
-            <h1 class="about-title">featured work</h1>
+            <div class="about-header">
+                <h1 class="about-title">featured work</h1>
+                <div class="about-content">
                 <div class="projects-grid">
-            <div class="project-card">
-                <div class="project-image-wrapper" style="max-width: 80%;">
-                    <img src="sev1.png" alt="Project 1">
+                    <div class="project-card">
+                        <div class="project-image-wrapper" style="max-width: 80%;">
+                        <img src="sev1.png" alt="Project 1">
                 </div>
                 <div class="project-details">
                     <span class="project-year">2024</span>
@@ -58,6 +59,7 @@
                 </div>
             </div>
         </div>
+                </div>
             </div>
     </main>
 </body>
