--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <a href="index.html" class="logo">nkem okafor</a>
         <nav>
              <a href="projects.html">projects</a>
-            <a href="about.html">about</a>    
+            <a href="about.html" class="active">about</a>    
             <a href="contact.html">contact</a>
            
 </nav>
