--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Nkem Okafor | Designer</title>
+    <title>Nkem Okafor | Home</title>
 </head>
-<body class="about-page-body">
+<body class="home-page">
     <header class="navbar">
         <a href="index.html" class="logo">nkem okafor</a>
         <nav>
@@ -15,16 +15,14 @@
         </nav>
     </header>
 
-    <main class="about-main">
-        <div class="content-wrapper">
-            <h1 class="hero-title">
-                Full-stack designer <br> 
-                with a focus on <br>
-                <span class="inline-link">crafting digital experiences</span> <br>
-                that solve complex problems
-            </h1>
-        </div>
-
+    <main class="hero-container">
+        <h1 class="hero-text">
+            Full-stack designer <br>
+            with a focus on <br>
+            <span class="lime-text">crafting digital experiences</span> <br>
+            <span class="lime-text">that solve complex problems</span>
+        </h1>
+        
         <div class="icon-detail">+</div>
     </main>
 </body>
