--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         </nav>
     </header>
 
-    <main class="hero-container">
+   <main class="hero-container">
+    <div class="hero-wrapper">
         <h1 class="hero-text">
             Full-stack designer <br>
             with a focus on <br>
             <span class="lime-text">crafting digital experiences</span> <br>
             <span class="lime-text">that solve complex problems</span>
         </h1>
-        
-        <div class="icon-detail">+</div>
+    </div>
     </main>
 </body>
 </html>
