--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
             <a href="contact.html">contact</a>
         </nav>
     </header>
-
-   <main class="hero-container">
-    <div class="hero-wrapper">
-        <h1 class="hero-text">
+         <main class="about-main">
+	     <h1>
             Full-stack designer <br>
             with a focus on <br>
             <span class="lime-text">crafting digital experiences</span> <br>
             <span class="lime-text">that solve complex problems</span>
         </h1>
-    </div>
+      
+      <div class="icon-detail"></div>
     </main>
+
 </body>
 </html>
