--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </nav>
     </header>
          <main class="about-main">
-	     <h1>
+	     <h1 class="hero-text">
             Full-stack designer <br>
             with a focus on <br>
             <span class="lime-text">crafting digital experiences</span> <br>
